# python-cfonts

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  netlify.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
cfonts/: __init__.py  __version__.py  cli.py  colors.py  consts.py  core.py
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_templates/: sidebarintro.html
tests/: conftest.py  example.py  test_font_class.py  test_render.py  test_render_console.py  test_utils.py
