[build-system]
build-backend = "pdm.builders.api"
requires = ["pdm"]

[tool.pdm]
name = "python-cfonts"
version = {from = "cfonts/__version__.py"}
author = "Frost Ming <mianghong@gmail.com>"
description = "Sexy fonts for the console"
homepage = "https://github.com/frostming/python-cfonts"
license = "GNU General Public License v2 (GPLv2)"
readme = "README.md"
python_requires = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"

classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pdm.project_urls]
Documentation = "https://python-cfonts.readthedocs.io/"

[tool.pdm.dependencies]
click = "*"
colorama = "*"
"backports.shutil_get_terminal_size" = {marker = "python_version < \"3.4\"", version = "*"}

[tool.pdm.dev-dependencies]
pytest = "*"
flake8 = "*"
sphinx = "*"
sphinx-click = "*"

[tool.pdm.cli]
cfonts = "cfonts.cli:cli"
