[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "flake8",
    "sphinx",
]

[tool.pdm.cli]
cfonts = "cfonts.cli:main"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
version = {from = "cfonts/__version__.py"}
dynamic = ["version", "classifiers"]
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
    "colorama",
]
name = "python-cfonts"
description = "Sexy fonts for the console"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
homepage = "https://github.com/frostming/python-cfonts"
Documentation = "https://python-cfonts.readthedocs.io/"

[project.optional-dependencies]

[project.scripts]
cfonts = "cfonts.cli:main"
