[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
version = {from = "cfonts/__version__.py"}
dynamic = ["version", "classifiers"]
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
    "colorama",
]
name = "python-cfonts"
description = "Sexy fonts for the console"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
homepage = "https://github.com/frostming/python-cfonts"
Documentation = "https://python-cfonts.readthedocs.io/"

[project.scripts]
cfonts = "cfonts.cli:main"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "flake8",
    "sphinx",
]

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py", "pdm/_vendor/*"]
filter_files = true
known_first_party = ["pdm"]
known_third_party = [
    "appdirs",
    "atoml",
    "click",
    "cfonts",
    "distlib",
    "halo",
    "packaging",
    "pip_shims",
    "pytest",
    "pythonfinder"
]
